# tdESP32display

./: .gitignore  CLAUDE.md  CMakeLists.txt  P3A_STATUS.md  README.md  ROADMAP.md  TOUCHDESIGNER_INTEGRATION.md  sdkconfig  test_upload.sh
components/animated_gif_decoder/: AnimatedGIF.cpp  CMakeLists.txt  gif.inl  gif_animation_decoder.c  gif_animation_decoder.cpp
components/animated_gif_decoder/include/: arduino_compat.h
components/app_state/: CMakeLists.txt  app_state.c  app_state.h
components/config_store/: config_store.c  config_store.h
components/http_api/: CMakeLists.txt  http_api.c  http_api.h
components/libwebp_decoder/: CMakeLists.txt  webp_decoder_component.c
def/: sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  animation_player.c  app_lcd_p4.c  app_touch.c  app_wifi.c  idf_component.yml  jpeg_animation_decoder.c  p3a_main.c  png_animation_decoder.c  webp_animation_decoder.c
main/include/: animation_decoder.h  animation_decoder_internal.h  animation_player.h  app_lcd.h  app_touch.h  app_wifi.h
reference/05_wifistation/: sdkconfig
reference/05_wifistation/components/config_store/: CMakeLists.txt
reference/05_wifistation/components/http_api/: CMakeLists.txt  http_api.c  http_api.h
reference/05_wifistation/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  station_example_main.c
touchdesigner/: README.md
touchdesigner/scripts/: build_p3a_network.py  p3a_upload_http.py
